src/test/deca/syntax/valid/parser/oracle/class_with_asm_method2.deca
class A{
	void f() asm("\"Hello \\ World !\"");
}