src/test/deca/syntax/invalid/parser/with_object/method_asm_multi_string2.deca
class A { a a () asm (LOAD
			READ
			WRITE"); }